Bug 62065 - Use Maven artifact for JAF Module instead of embedded module
Bugzilla Id: 62065

git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1840433 13f79535-47bb-0310-9956-ffa450edef68